# Serializer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Serializer.h  SerializerTest.cpp
